# agentgymrl

./: .gitignore  pyproject.toml
discovery/: README.md  phi_4_mini_instruct_token_discovery.ipynb  phi_4_mini_instruct_tool_call_inference.ipynb
examples/calculator_agent/: main.py  pyproject.toml
examples/calculator_agent/datasets/: basic_calculations_train.csv
examples/calculator_agent/environment/: calculation_environment.py
examples/calculator_agent/environment/entities/: expression.py
examples/calculator_agent/environment/tools/: calculator.py
examples/calculator_agent/evaluation/: calc_evals.py  main.py  runner.py
examples/calculator_agent/evaluation/results/Phi-4-mini-instruct-standard-calculator/: README.md  summary_results_20250328_193639.csv
examples/calculator_agent/evaluation/verifiers/: answer_verifier.py
examples/calculator_agent/inference/: agentic_system.py
examples/calculator_agent/inference/model_exec/: claude.py
examples/calculator_agent/inference/prompting/: sys_msg.py  sys_msg_phi_4_minimal.md  sys_msg_phi_4_tools.md
examples/calculator_agent/prompting/: sys_msg.md  sys_msg.py
examples/calculator_agent/tests/: test_answer_verifier.py  test_calculator.py
examples/calculator_agent/training/: .env.example  train.py
examples/calculator_agent/training/rewards/: calculator_reward_func.py  exec_judge.py  judge_yaml_response_parser.py  tool_judge.md
src/agentgymrl/: __init__.py
src/agentgymrl/environments/: environment.py
tests/: test_phi_4_mini_tool_call_parser.py  test_tool_func_schema_generator.py
(+11 files in other folders)
