[project]
name = "agentgymrl"
version = "0.1.0"
description = "A library to create tool calling agents using RL"
readme = "README.md"
authors = [
    { name = "Dan Austin", email = "dan@aituning.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "torch>=2.6.0",
    "transformers>=4.50.1",
    "trl>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
