[project]
name = "calculator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentgymrl",
    "anthropic>=0.49.0",
    "peft>=0.15.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "wandb>=0.19.8",
]

[tool.uv.sources]
agentgymrl = { workspace = true }

[tool.uv.workspace]
members = [
	"../../../agentgymrl"
]

